...
    "knowledge.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Knowledge"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Kiến thức"
...
